test/errors/1 - Errors should be visible scenario.js
description: 'Input errors should be visible',

steps: [
	{
		'ErrorComponent.title': true,
	}
]
